# WidU

./: .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  ruff.toml
docs/: API_CONTRACTS.md  ARCHITECTURE.md  HANDOFF_ISSUES.md  HANDOFF_SUMMARY.md  IMPROVE_PROPOSALS.md  IMPROVE_SUMMARY.md  WidU_해설문서.docx  build_doc.js
models/: VERSIONS.md
scripts/: README.md  active_learning_demo.md  active_learning_demo.py  benchmark_device_configs.md  benchmark_device_configs.py  benchmark_transmission_rate.md  benchmark_transmission_rate.py  benchmark_vs_baseline.md  benchmark_vs_baseline.py  build_hr_baseline.md  build_hr_baseline.py  calibrate_l1.md  calibrate_l1.py  demo_stream.md  demo_stream.py  download_data.md  download_data.py  eval_augmentation.md  eval_augmentation.py  eval_cascade.md  eval_cascade.py  eval_crossdataset.md  eval_crossdataset.py  eval_elderly_mitigation.md  eval_elderly_mitigation.py  eval_l1_ppgdalia.md  eval_l1_ppgdalia.py  eval_l3_geolife.md  eval_l3_geolife.py  eval_l3_immobility.md  eval_l3_immobility.py  eval_l4_resting_hr.md  eval_l4_resting_hr.py  eval_lodo.md  eval_lodo.py  eval_wrist.md  eval_wrist.py  golden_check.py  improve_softfall.md  improve_softfall.py  (+34 more)
serving/: api.py
tests/: golden.json  test_api_smoke.py  test_l0_safety.py  test_l1_hr.py  test_l2_fall.py  test_l5_escalation.py  test_version.py
widu/: __init__.py  augment.py  config.py  datalog.py  falleval.py  gating.py  l0_safety.py  l1_hr.py  l2_fall.py  l3_behavior.py  l4_trend.py  l5_fusion.py  pipeline.py  preprocess.py  types.py
(+11 files in other folders)
